testdata/baselines/reference/submodule/conformance/jsDeclarationsDefault.errors.txt
index4.js(2,19): error TS8010: Type annotations can only be used in TypeScript files.


==== index1.js (0 errors) ====
    export default 12;
    
==== index2.js (0 errors) ====
    export default function foo() {
        return foo;
    }
    export const x = foo;
    export { foo as bar };
    
==== index3.js (0 errors) ====
    export default class Foo {
        a = /** @type {Foo} */(null);
    };
    export const X = Foo;
    export { Foo as Bar };
    
==== index4.js (1 errors) ====
    import Fab from "./index3";
    class Bar extends Fab {
                      ~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
        x = /** @type {Bar} */(null);
    }
    export default Bar;
    
==== index5.js (0 errors) ====
    // merge type alias and const (OK)
    export default 12;
    /**
     * @typedef {string | number} default
     */
    
==== index6.js (0 errors) ====
    // merge type alias and function (OK)
    export default function func() {};
    /**
     * @typedef {string | number} default
     */
    